Fixed a problem with horizontal scrolling on iPads in portrait mode.
For some reason, the whole page would scroll to the side ever so slightly. Adjusting this media query in the 1140 grid seemed to solve that however.

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -380,7 +380,7 @@ img {
 
 /* Smaller screens */
 /* Mobile */
-@media handheld, only screen and (max-width: 767px) {
+@media handheld, only screen and (max-width: 775px) {
   body {
     -webkit-text-size-adjust: none; }
 
