--- a/assets/styles/sass/1140.scss
+++ b/assets/styles/sass/1140.scss
@@ -93,7 +93,7 @@ img {
 
 /* Mobile */
 
-@media handheld, only screen and (max-width: 767px) {
+@media handheld, only screen and (max-width: 775px) {
 
 	body {
 		-webkit-text-size-adjust: none;
